# mongo-c-driver-async

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Earthfile  Makefile  README.md  bpt.deps.yaml  index.html  objects.inv  pyproject.toml  searchindex.js  vcpkg-configuration.json  vcpkg.json
_sources/: index.rst
_sources/dev/: bson-building.rst  deletion.rst  documenting.rst  index.rst  nanosenders.rst  queries.rst
_sources/explain/: consider.rst  index.rst
_sources/how-to/: connect.rst  index.rst  looping.rst  status-handling.rst
_sources/learn/: box.rst  index.rst
_sources/learn/bson/: inserting.rst
_sources/ref/: async.rst  box.rst  database.rst  features.rst  loop.rst  operation.rst  str.rst  time.rst  vec.rst
_sources/ref/bson/: doc.rst  iter.rst
_sources/ref/coll-ops/: index.rst  update.rst
_static/: documentation_options.js  styles.css
dev/: index.html
dev/asio/: index.html
dev/bson-building/: index.html
dev/bson-parsing/: index.html
dev/coroutines/: index.html
dev/deletion/: index.html
dev/documenting/: index.html
dev/guidelines/: index.html
dev/nanosenders/: index.html
dev/queries/: index.html
dev/result/: index.html
dev/tls/: index.html
docs/: .gitignore  conf.py  index.rst
docs/_static/: styles.css
docs/dev/: asio.rst  bson-parsing.rst  coroutines.rst  deletion.rst  documenting.rst  guidelines.rst  index.rst  nanosenders.rst  result.rst  tls.rst
docs/explain/: async-model.rst  why-async.rst
docs/how-to/: communicate.example.c  communicate.rst  connect.example.c  connect.rst  index.rst  looping.example.c  looping.rst
docs/learn/: box.example.cpp  box.rst  connect.example.c  connect.rst  index.rst  read.example.c  read.rst  write.example.c  write.rst
docs/learn/bson/: bson.example.cpp  index.rst  lifetime.rst  reading.rst
docs/ref/: alloc.rst  api-patterns.rst  async.rst  box.rst  bson.rst  building.rst  client.rst  collection.rst  connection.rst  database.rst  emitter.rst  glossary.rst  handler.rst  index.rst  loop.rst  meta-attrs.rst  operation.rst  status.rst  str.rst  vec.rst
docs/ref/bson/: doc.rst  index.rst  iter.rst  mut.rst  types.rst  utf8.rst  value.rst  view.rst
docs/ref/coll-ops/: aggregate.rst  count.rst  delete.rst  distinct.rst  drop.rst  find.rst  insert.rst  params.rst  replace.rst
etc/: amongocConfig.cmake.in
etc/quickstart/: CMakeLists.txt  README.md  hello-amongoc.c  vcpkg.json
etc/vcpkg-ports/neo-fun/: CMakeLists.txt  portfile.cmake  vcpkg.json
explain/: index.html
explain/async-model/: index.html
explain/consider/: index.html
explain/why-async/: index.html
genindex/: index.html
how-to/: index.html
how-to/communicate/: index.html
how-to/connect/: index.html
how-to/looping/: index.html
how-to/status-handling/: index.html
include/amongoc/: aggregate.h  aggregate_params.h  alloc.h  amongoc.h  async.h  box.h  box.hpp  client.h  collection.h  config.h  connection.h  database.h  default_loop.h  emitter.h  emitter.hpp  emitter_result.h  emitter_result.hpp  handler.h  handler.hpp  loop.h  loop.hpp  operation.h  operation.hpp  relocation.hpp  status.h  write_error.h
include/amongoc/bson/: build.h  make.hpp  mcd-integer.h  parse.hpp  types.h  view.h
include/bson/: byte.h  doc.h  format.h  iter_errc.h  iterator.h  make.hpp  mut.h  parse.hpp  types.h  utf8.h  value.h  value_ref.h  view.h  view_errc.h
include/bson/detail/: assert.h  iter.h  mem.h
include/mlib/: alloc.h  allocate_unique.hpp  config.h  cstring.h  delete.h  integer.h  str.h  stream.h  time.h  type_traits.hpp  unique.hpp  vec.t.h
include/mlib/detail/: cxx20.hpp
learn/: index.html
learn/box/: index.html
learn/bson/: index.html
learn/bson/inserting/: index.html
learn/bson/lifetime/: index.html
learn/connect/: index.html
learn/read/: index.html
learn/write/: index.html
ref/: index.html
ref/alloc/: index.html
ref/api-patterns/: index.html
ref/async/: index.html
ref/box/: index.html
ref/bson/: index.html
ref/building/: index.html
ref/client/: index.html
ref/coll-ops/: index.html
ref/collection/: index.html
ref/database/: index.html
ref/emitter/: index.html
ref/features/: index.html
ref/glossary/: index.html
ref/handler/: index.html
ref/loop/: index.html
ref/meta-attrs/: index.html
ref/operation/: index.html
ref/status/: index.html
ref/str/: index.html
ref/time/: index.html
ref/vec/: index.html
search/: index.html
src/: test_params.test.hpp  testing-main.test.cpp
src/amongoc/: alloc.cpp  async.c  async.cpp  async.just.cpp  async.let.cpp  async.test.cpp  async.then.cpp  box.c  box.compress.hpp  box.test.cpp  buffer.hpp  client.c  client.cpp  client.hpp  client.impl.hpp  client.test.cpp  client_fixture.test.hpp  collection.c  collection.cpp  collection.hpp  collection.test.cpp  connection.cpp  connection.hpp  connection.test.cpp  connection_pool.cpp  connection_pool.hpp  connection_pool.test.cpp  coroutine.cpp  coroutine.hpp  coroutine.test.cpp  database.cpp  database.hpp  default_loop.cpp  emitter.cpp  event_emitter.hpp  event_emitter.test.cpp  format.hpp  handshake.cpp  handshake.hpp  loop.c  (+17 more)
src/bson/: build.c  build.test.cpp  build.test.hpp  byte.c  doc.c  format.cpp  format.test.cpp  iterator.c  make.cpp  make.test.cpp  mut.c  mut.test.cpp  parse.cpp  parse.test.cpp  types.cpp  use.test.c  utf8.c  value.c  value.test.cpp  value_ref.cpp  view.c  view.cpp  view.test.cpp
src/mlib/: algorithm.hpp  algorithm.test.cpp  alloc.cpp  alloc.test.cpp  bytes.hpp  bytes.test.cpp  config.test.cpp  cstring.c  integer.c  integer.test.cpp  invoke.hpp  lazy_init.hpp  lazy_init.test.cpp  object_t.hpp  str.c  str.test.cpp  stream.c  stream.cpp  time.c  time.test.cpp  utility.hpp  vec.test.cpp
tests/: cxx17.test.cpp  sigcheck.test.cpp  sigcheck.test.h  use-bson.test.c
tests/consume/simple/: CMakeLists.txt  test.c
tools/: Ccache.cmake  DeclareFetchContentDeps.cmake  GenURITests.cmake  LLDLinker.cmake  MongoPlatform.cmake  MongoWarnings.cmake  Sanitizers.cmake  Specifications.cmake  TestProject.cmake  __install  docs-build.py  include-fixup.py
(+76 files in other folders)
