[tool.poetry]
name = "amongoc"
version = "0.1.0"
description = "An asynchronous MongoDB C driver library"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.4.16"
sphinx-book-theme = "^1.1.3"
clang-format = "^18.1.8"
sphinxcontrib-moderncmakedomain = "^3.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
